--- a/pages/detailProduct/basepd.css
+++ b/pages/detailProduct/basepd.css
@@ -1,55 +1,18 @@
 /* KHAI BÁO BIẾN */
 :root {
-    --color-blue: #0d6efd;
-    --color-indigo: #6610f2;
-    --color-purple: #6f42c1;
-    --color-pink: #d63384;
-    --color-red: #dc3545;
-    --color-orange: #fd7e14;
-    --color-yellow: #ffc107;
-    --color-green: #198754;
-    --color-teal: #20c997;
-    --color-cyan: #0dcaf0;
-    --color-white: #fff;
-    --color-gray: #6c757d;
-    --color-gray-dark: #343a40;
-    --color-gray-100: #f8f9fa;
-    --color-gray-200: #e9ecef;
-    --color-gray-300: #dee2e6;
-    --color-gray-400: #ced4da;
-    --color-gray-500: #adb5bd;
-    --color-gray-600: #6c757d;
-    --color-gray-700: #495057;
-    --color-gray-800: #343a40;
-    --color-gray-900: #212529;
-    --color-primary: #000000;
-    --color-secondary: #6c757d;
-    --color-success: #198754;
-    --color-info: #0dcaf0;
-    --color-warning: #ffc107;
-    --color-danger: #dc3545;
-    --color-light: #f8f9fa;
-    --color-dark: #212529;
-    --color-primary-rgb: 13,110,253;
-    --color-secondary-rgb: 108,117,125;
-    --color-success-rgb: 25,135,84;
-    --color-info-rgb: 13,202,240;
-    --color-warning-rgb: 255,193,7;
-    --color-danger-rgb: 220,53,69;
-    --color-light-rgb: 248,249,250;
-    --color-dark-rgb: 33,37,41;
-    --color-white-rgb: 255,255,255;
-    --color-black-rgb: 0,0,0;
-    --color-body-color-rgb: 33,37,41;
-    --color-body-bg-rgb: 255,255,255;
-    --color-font-sans-serif: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    --color-font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-    --color-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-    --color-body-font-family: var(--color-font-sans-serif);
-    --color-body-font-size: 1rem;
-    --color-body-font-weight: 400;
-    --color-body-line-height: 1.5;
-    --color-body-color: #212529;
+    --main-color: #373737;
+    --white: #fff;
+    --text-color: #6C6D70;
+    --badget-bg: #fff;
+    --green: #98a882;
+    --pink: #fb6e7c;
+    --brown: #c4b095;
+    --yellow: #f4ed95;
+    --red: #FF0004;
+    --gray: #A8A9AD;
+    --black: #212529;
+    --border-color: #221F20;
+    --header-height: 5%
 }
 
 * {
