--- a/pages/detailProduct/stylespd.css
+++ b/pages/detailProduct/stylespd.css
@@ -1,144 +1,50 @@
-
 html, body {
     height: 100%;
     width: 100%;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
 
-.active {
-    display: block;
-}
-
-
-.product-detail-body {
+/* .product-detail-body {
     position: relative;
     top: 15rem;
-}
+} */
+
 /* HEADER */
-/* .main {
-    overflow: hidden;
-} */
-/* .navbar {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    z-index: 1;
-}
-.menuitems {
-    display: block;
-
-}
-.nav-item {
-    display: inline-block;
-    font-size: 14px;
-    letter-spacing: 1px;
-    margin-right: 20px;
-    font-weight: 600;
-    text-align: right;
-}
-.nav-item-link {
-    text-decoration: none;
-    list-style: none;
-    cursor: pointer;
-    color: var(--color-primary);
-}
-
-.nav-item-link:hover,
-.navbar-icon-link:hover {
-    text-decoration: none;
-    list-style: none;
-    cursor: pointer;
-    color: var(--color-secondary);
-}
-
-.action-menu {
-    display: flex;
-    justify-content: space-between;
-    transform: translateY(10px);
-}
-.navbar__action-menu-item {
-    display: flex;
-    padding: 5px;
-}
-.navbar-icon-link {
-    text-decoration: none;
-    cursor: pointer;
-    color: var(--color-primary);
-    list-style: none;
-}
-.navbar-icon {
-    text-decoration: none;
-} */
+/* search-bar */
+.search-section {}
+.search-input {}
+.header-icon {}
+.search-icon-1 {}
+.cancel-icon {}
+/* category on mobile, tablet */
+.category {}
+.login-btn {}
+.category-list {}
+.category-item {}
+/* main header */
+#header {}
+.logo {}
+.image {}
+#navigation-bar {}
+.bar-icon {}
+.nav-icon {}
+.search-icon {}
 /* END HEADER */
 
-/* STATUS NAV */
-#close-bar {
-    float: right;
-    border-radius: 50px;
-    width: 40px;
-    height: 40px;
-    position: relative;
-    z-index: 11;
-    border: none;
-    background-color: var(--color-white);
-}
-#close-bar:hover {
-    background-color: #222222;
-}
-.closebar-icon {
-    cursor: pointer;
-}
-#close-bar:hover .closebar-icon:hover {
-    cursor: pointer;
-    color: var(--color-white);
-}
-#close-bar:hover > .closebar-icon {
-    cursor:pointer; 
-    color:var(--color-white)
-}
-
-.search-box {
-    border-radius: 20px;
-    height: 45px;
-    padding: 20px;
-    width: 40%;
-    border: 1px #222222 solid;
-    margin: 0;
-    font-size: 1rem;
-    line-height: 14px;
-}
-.search-btn{
-    margin-left: 5px;
-    border-radius: 40px;
-    width: 45px;
-    position: relative;
-    z-index: 2;
-    border: 1px var(--color-dark) solid;
-    background-color: var(--color-white);
-}
-.search-btn:hover{
-    background-color: #222222;
-}
-.search-icon {
-    cursor: pointer;
-}
-.search-icon:hover {
-    color: var(--color-white);
-}
-.search-btn:hover > .search-icon {
-    color: var(--color-white);
-}
+/* NAV Breadcrumb */
 .breadcrumb {
-    font-size: 13px;
+    margin-top: calc(var(--header-height) + 20px);
+    background-color: transparent;
+    margin-bottom: 1rem;
     display: flex;
     flex-wrap: wrap;
+    font-size: 13px;
     padding: 0 0;
-    margin-bottom: 1rem;
     list-style: none;
     padding: 15px 10px;
-    background-color: transparent;
 }
+.breadcrumb-item {}
 .breadcrumb-item-link {
     text-decoration: none;
     color: #000000;
@@ -147,46 +53,41 @@ html, body {
     color: #666666;
     text-decoration: none;
 }
-.breadcrumb-item-link--active {
-    color: #6c757d;
-}
 .breadcrumb-item+.breadcrumb-item::before {
     float: left;
     padding-right: 0.5rem;
     color: #6c757d;
-    content: var(--color-breadcrumb-divider, "/");
+    content: var(--gray "/");
 }
 .breadcrumb-item+.breadcrumb-item {
     padding-left: 0.5rem;
 }
-/* END STATUS NAV */
+/* END NAV */
 
 /* CONTENT */
+/* Product */
 .imgpro {
     box-sizing: border-box;
-}
-
-.products {
-    margin-bottom: 4rem !important;
 }
 #ProductImg {
     display: block;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: var(--color-dark);
+    color: var(--main-color);
     text-align: left;
-    background-color: var(--color-white);
+    background-color: var(--white);
+}
+.img-icon {
+    text-align: center;
+    margin-bottom: 20px;
 }
 .small-img {
     padding: 10px 5px;
     max-width: 20%;
     vertical-align: middle;
 }
-.img-icon {
-    text-align: center;
-    margin-bottom: 20px;
-}
+/* Detail Product */
 .pro-title{
     text-transform: uppercase;
     margin-top: 40px;
@@ -201,6 +102,12 @@ html, body {
     margin-inline-end: 0px;
     font-weight: bold;
 }
+.detail-pro-price {
+    padding: 10px 0;
+    border-bottom: solid 1px #EEEEEE;
+    font-size: 18px;
+    font-weight: bold;
+}
 .detail-pro-sale {
     padding: 5px 15px;
     margin-right: 10px;
@@ -210,18 +117,20 @@ html, body {
     font-size: 12px;
     background-color: #DC633A;
 }
-.detail-pro-price {
-    padding: 10px 0;
+.size-select {
+    display: inline-block;
+    padding: 10px 0px;
+    width: 100%;
     border-bottom: solid 1px #EEEEEE;
-    font-size: 18px;
-    font-weight: bold;
 }
-.detail-pro-price del {
-    font-size: 14px;
-    color: #666666;
-    padding-left: 10px;
-    font-weight: 500;
+.size-select input {
+    display: none;
 }
+.size-select input:checked + label {
+    background-color: #000000;
+    color: #FFFFFF;
+}
+.size-selector {}
 .size-btn {
     margin: 0;
     background: #FFFFFF;
@@ -237,29 +146,14 @@ html, body {
     cursor: pointer;
     list-style: none;
 }
-.size-select input:checked + label {
-    background-color: #000000;
-    color: #FFFFFF;
-}
-.size-select {
-    display: inline-block;
-    padding: 10px 0px;
-    width: 100%;
-    border-bottom: solid 1px #EEEEEE;
-}
+.selector-actions {}
+.quantity {}
 .minusdecrease,
 .plusincrease {
     height: 30px;
     width: 30px;
     float: left;
     border: 1px solid #F3F3F3;
-}
-.detail-number {
-    text-align: center;
-    width: 80px;
-    height: 30px;
-    border: 1px solid #F3F3F3;
-    float: left;
 }
 .detail-btn {
     font-size: 12px;
@@ -314,13 +208,14 @@ html, body {
     transition-delay: 0.1s;
 }
 .buy-btn {
-    color: black;
-    margin-left: 15px;
-    cursor: pointer;
+    background-color: #FF2023;
+    border: 1px solid #FF2023;
+    transition: all 0.3s;
     position: relative;
     overflow: hidden;
-    transition: all 0.3s;
-    border: 1px solid black;
+    color: #ffffff;
+    cursor: pointer;
+    margin-left: 15px;
 }
 .buy-btn::before {
     content: "";
@@ -333,29 +228,15 @@ html, body {
     transition: all 0.5s;
 }
 .buy-btn:hover {
-    color: #ffffff;
-    background-color: black;
-    /* border: 0.2px solid #FF2023; */
+    color: #000;
+    background-color: #ffffff;
+    border: 0.2px solid #000;
 }
 .buy-btn:hover::before {
     transform: skewX(30deg) translate(150%, -50%);
     transition-delay: 0.1s;
 }
-.detail-btn:hover {
-    font-size: 12px;
-    width: 100%;
-    line-height: 25px;
-    text-align: center;
-    text-transform: uppercase;
-    padding: 10px;
-    font-weight: 600;
-    transition: all 0.5s ease;
-    position: relative;
-    z-index: 1;
-}
-.size-select input {
-    display: none;
-}
+
 .desc {
     margin-top: 25px;
     font-weight: 400;
@@ -364,11 +245,9 @@ html, body {
     margin-top: 0;
     margin-bottom: 1rem;
 }
-
 .info {
     margin-top: 4rem;
 }
-
 .info .info-list .info-item {
     margin-right: 2.8rem;
     font-size: 1.2rem;
@@ -377,66 +256,33 @@ html, body {
     color: var(--text-color);
     text-transform: uppercase;
 }
-
 .info-content {
     margin-top: 2rem;
 }
-
 .info-content-item {
     margin-bottom: 2rem;
     display: none;
 }
-
 .info-content-item .container {
     display: flex;
     padding: 0;
 }
-
+.info-content-item-left {
+    margin-right: 4rem;
+}
 .info-content-item-left-item {
     font-weight: bold;
     margin-bottom: 2rem;
 }
-
 .info-content-item-right-item {
     margin-bottom: 2rem;
 }
-
-
-
-.border-active {
-    border-bottom: 0.1rem solid #000;
-}
-
-.info-content-item-left {
-    margin-right: 4rem;
-}
-
-.info-content {
-    margin-top: 2rem;
-}
-
-.info-content-item {
-    display: none;
-}
-
-.sizechart {
-    width: 100%;
-}
-
-.sizechart-img {
-    width: 100%;
-}
-
+.introduction {}
 .introduction h3 {
     font-size: 20px;
     text-align: center;
     font-weight: 600;
     text-transform: uppercase;
-}
-.introduction p {
-    text-align: justify;
-    margin-top: 0;
-    margin-bottom: 1rem;
 }
 .introduction img {
     width: 100%;
@@ -449,9 +295,10 @@ html, body {
     font-weight: 600;
     font-size: 24px;
 }
-.more {
-    text-decoration: none;
-    color: #000000;
+.introduction p {
+    text-align: justify;
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
 .pro-list {
     display: flex;
@@ -459,12 +306,41 @@ html, body {
     justify-content: center;
     align-items: center;
 }
+.products {
+    margin-bottom: 4rem !important;
+}
 .pro-img {
     text-align: center;
     position: relative;
     max-width: 100%;
     height: auto;
     transition: all 0.5s ease 0s;
+}
+.detail-pro-price del {
+    font-size: 14px;
+    color: #666666;
+    padding-left: 10px;
+    font-weight: 500;
+}
+.detail-number {
+    text-align: center;
+    width: 80px;
+    height: 30px;
+    border: 1px solid #F3F3F3;
+    float: left;
+}
+
+.sizechart {
+    width: 100%;
+}
+
+.sizechart-img {
+    width: 100%;
+}
+
+.more {
+    text-decoration: none;
+    color: #000000;
 }
 .pro-detail {
     text-align: center;
