--- a/pages/search/style.css
+++ b/pages/search/style.css
@@ -22,6 +22,9 @@ html, body {
     --gray: #A8A9AD;
     --black: #212529;
     --border-color: #221F20;
+    --orange: #fa800eef;
+    --red: #eb1212;
+    --violet: #ea6ff5;
 }
 
 /*Category on the header*/
@@ -113,58 +116,6 @@ html, body {
     cursor: pointer;
 }
 
-@media only screen and (max-width: 1000px) {
-    html, body {
-        height: 100%;
-        width: 100%;
-        font-family: 'Roboto', sans-serif;
-        color: #222222;
-        box-sizing: border-box;
-    }
-    .list {
-        display: none;
-    }
-    #navigation-bar {
-        display: block;
-        display: flex;
-        align-items: center;
-    }
-    .nav-icon {
-        font-size: 1rem;
-    }
-    .header-icon {
-        font-size: 2rem;
-    }
-    .bar-icon {
-        font-size: 2rem;
-    }
-    .nav-icon .search {
-        display: none;
-    }
-    .nav-icon .user {
-        display: none;
-    }
-    #best-seller .type .type-list .type-item {
-        font-size: 1.6rem;
-    }
-
-    #header .logo {
-        width: 30%;
-    }
-
-    #header #navigation-bar {
-        width: 10%;
-    }
-
-    .filter{
-        display: none;
-        transition: all 0.3s ease 0;
-    }
-
-    #product-body{
-        margin-top: 8rem !important;
-    }
-}
 
 @media only screen and (max-width: 600px) {
     html, body {
@@ -216,6 +167,14 @@ html, body {
 
     #product-body{
         margin-top: 8rem !important;
+    }
+
+    .dropdown{
+        padding-right: 2rem !important;
+    }
+
+    .bootstrap-select .dropdown-menu{
+        min-width: 95% !important;
     }
 }
 
@@ -323,89 +282,40 @@ h2{
     cursor: pointer;
 }
 
-.dropdown-container{
-    margin-top: 1rem;
+.filter-option-label{
+    width: 100%;
+    text-align: left !important;
+    font-size: 1.5rem;
     padding: 0.5rem;
 }
 
-.select-box{
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    text-align: left;
-}
-
-.select-box .option-container{
-    background: none;
-    color: black;
-    max-height: 0;
-    width: 100%;
-    opacity: 0;
-    transition: all 0.3s;
-    overflow: hidden;
-    order: 1;
-}
-
-.selected{
-    background: none;
-    margin-bottom: 0.8rem;
-    color: black;
-    position: relative;
-    order: 0;
-    width: 100%;
-}
-
-.selected::after{
-    content: "";
-    background: url('../../src/img/angle-down-solid.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    color: white !important;
-    position: absolute;
-    height: 100%;
-    width: 1.4rem;
-    right: 1rem;
-    top: 1rem;
-    transition: all 0.3s;
-}
-
-.select-box .option-container.active + .selected::after{
-    transform: rotateZ(-180deg);
-    top: -1.1rem;
-}
-
-.select-box .option-container.active{
-    max-height: 24rem;
-    opacity: 1;
-    overflow-y: scroll;
-}
-
-.select-box .option-container::-webkit-scrollbar{
-    width: 0.8rem;
-    background: #d8d5d5;
-}
-
-.select-box .option-container::-webkit-scrollbar-thumb{
-    background: #bbbbbb;
-}
-
-.select-box .option, .selected{
-    padding: 1rem 2rem;
-    cursor: pointer;
+.filter-option{
     font-size: 1.5rem;
-    text-align: left;
 }
 
-.select-box .option:hover{
-    background: #adadad;
+.dropdown{
+    margin-top: 1rem;
+    font-size: 1rem;
+    display: flex !important;
+    flex-direction: column !important;
+    text-align: center !important;
+    width: 100% !important;
 }
 
-.select-box label{
-    cursor: pointer;
+.bootstrap-select .dropdown-menu{
+    font-size: 1.5rem;
+    min-width: 100%;
+    background: #cccdcf;
+    font-weight: bold !important;
 }
 
-.select-box .option .radio{
-    display: none;
+.btn-light{
+    padding: 1rem;
+    margin: 1rem;
+}
+
+#price .btn-light{
+    font-weight: 900 !important;
 }
 
 /*The filter 'n' reset btn*/
@@ -426,37 +336,13 @@ h2{
     background-color: #221F20;
 }
 
-/*Sort by menu*/
-#dropdown-sort{
-    margin: 0px;
-    padding: 0px;
-    margin-top: 1rem;
-    width: 100%;
-    position: absolute;
-    display: block;
+#discount{
+    z-index: 50000;
 }
 
+/*Sort by dropdown*/
 #sorter{
     width: 100%;
-
-}
-
-#sort-text{
-    border: 1px rgb(150, 148, 148) solid;
-    border-radius: 2.4rem;
-    max-width: 30rem;
-    margin-left: -0.5rem;
-    width: 100%;
-}
-
-#sorter .option-container.active + #sorter-text::after{
-    transform: rotateZ(-180deg);
-}
-
-#sorter .option-container{
-    z-index: 10000000;
-    background: white;
-    width: 80%;
 }
 
 /*Result_Search_Product*/
