--- a/pages/checkout/style.css
+++ b/pages/checkout/style.css
@@ -27,6 +27,15 @@ html, body {
     box-sizing: border-box;
 }
 
+.cart-item-quantity-price .del-icon {
+    color: var(--text-color);
+    cursor: pointer;
+}
+
+.cart-btn-link {
+    text-decoration: none !important;
+}
+
 .checkout-body{
     position: relative;
     top: 12rem;
@@ -114,7 +123,7 @@ html, body {
 }
 
 .checkout-products {
-    height: 40rem;
+    height: 36rem;
     overflow: scroll;
 }
 
@@ -136,8 +145,37 @@ html, body {
 .checkout-confirm-item {
     display: flex;
     justify-content: space-between;
+    margin-top: 2rem;
 }
 
 .checkout-confirm-item-left {
     font-size: 1.6rem;
+}
+
+.checkout-confirm-item-right {
+    font-size: 1.6rem;
+}
+
+.checkout-sum,
+.checkout-total {
+    font-weight: bold;
+}
+
+.checkout-confirm-btn {
+    padding: 1.2rem 0;
+    background-color: var(--black);
+    color: var(--white);
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    text-align: center;
+    margin-top: 2rem;
+    font-weight: bold;
+}
+
+.checkout-confirm-btn:hover {
+    background-color: var(--white);
+    color: var(--black);
+    border: 1px solid var(--black);
 }
