--- a/style.css
+++ b/style.css
@@ -83,6 +83,17 @@ html, body {
     font-size: 2rem;
 }
 
+.cart-number {
+    position: relative;
+    top: -1.8rem;
+    right: 0.4rem;
+    padding: 0.2rem 0.5rem;
+    border-radius: 50%;
+    background-color: var(--black);
+    font-size: 1.2rem;
+    color: var(--white);
+}
+
 .header-icon:hover {
     opacity: 0.8;
 }
