--- a/style.css
+++ b/style.css
@@ -226,11 +226,15 @@ html, body {
     width: 100%;
     height: 70%;
     overflow: scroll;
-    -ms-overflow-style: none;
+    /* -ms-overflow-style: none; */
 }
 
 ::-webkit-scrollbar {
-    display: none;
+    /* display: none; */
+}
+
+::-webkit-scrollbar-thumb {
+    z-index: 10000000000000000000000000000000000;
 }
 
 
