--- a/pages/detailProduct/stylespd.css
+++ b/pages/detailProduct/stylespd.css
@@ -139,6 +139,46 @@
     cursor: pointer;
     list-style: none;
 }
+.color-select {
+    display: inline-block;
+    padding: 10px 0px;
+    width: 100%;
+    border-bottom: solid 1px #EEEEEE;
+}
+.color-select input {
+    display: none;
+}
+.color-selector {}
+.color-btn {
+    margin: 0;
+    background: #FFFFFF;
+    width: 40px;
+    margin-right: 5px;
+    height: 40px;
+    line-height: 40px;
+    position: relative;
+    border: 1px solid #E5E5E5;
+    border-radius: 100px;
+    font-size: 12px;
+    font-weight: 500;
+    text-align: center;
+    cursor: pointer;
+    list-style: none;
+}
+.color-btn:nth-of-type(1) {
+    background-color: var(--green);
+}
+.color-btn:nth-of-type(2) {
+    background-color: var(--pink);
+}
+.color-btn:nth-of-type(3) {
+    background-color: var(--yellow);
+}
+.color-select input:checked + label {
+    color: #FFFFFF;
+    border: 1px solid #323333;
+}
+
 .selector-actions {}
 .quantity {}
 .minusdecrease,
