--- a/pages/cart/style.css
+++ b/pages/cart/style.css
@@ -67,3 +67,21 @@ p{
 .cart-btn-link {
     text-decoration: none !important;
 }
+#back-to-top {
+    display: none;
+    position: fixed;
+    bottom: 100px;
+    right: 10px;
+    z-index: 100;
+    border: none;
+    cursor: pointer;
+    margin-right: 10px;
+}
+.up-icon {
+    height: 32px;
+    width: 32px;
+    fill: grey;
+}
+.up-icon:hover {
+    fill: var(--black);
+}
