--- a/pages/detailProduct/basepd.css
+++ b/pages/detailProduct/basepd.css
@@ -32,3 +32,22 @@ html, body {
     display: flex;
     flex-wrap: wrap;
 }
+
+#back-to-top {
+    display: none;
+    position: fixed;
+    bottom: 100px;
+    right: 10px;
+    z-index: 100;
+    border: none;
+    cursor: pointer;
+    margin-right: 10px;
+}
+.up-icon {
+    height: 32px;
+    width: 32px;
+    fill: grey;
+}
+.up-icon:hover {
+    fill: var(--black);
+}
