--- a/pages/search/style.css
+++ b/pages/search/style.css
@@ -530,3 +530,21 @@ h2{
     width: 40%;
     cursor: pointer;
 }
+#back-to-top {
+    display: none;
+    position: fixed;
+    bottom: 100px;
+    right: 10px;
+    z-index: 100;
+    border: none;
+    cursor: pointer;
+    margin-right: 10px;
+}
+.up-icon {
+    height: 32px;
+    width: 32px;
+    fill: grey;
+}
+.up-icon:hover {
+    fill: var(--black);
+}
