--- a/pages/detailProduct/stylespd.css
+++ b/pages/detailProduct/stylespd.css
@@ -383,7 +383,7 @@
 }
 .pro-img:hover > .pro-btn a,
 .pro-btn a:hover {
-    background-color: #00CED1;
+    background-color: #000000;
     color: #FFFFFF;
 }
 .pro-img:hover .pro-btn {
@@ -437,25 +437,6 @@
 }
 /* END CONTENT */
 
-/* FOOTER */
-/* #back-to-top {
-    display: none;
-    position: fixed;
-    bottom: 100px;
-    right: 10px;
-    z-index: 100;
-    border: none;
-    cursor: pointer;
-    margin-right: 10px;
-}
-.up-icon {
-    height: 32px;
-    width: 32px;
-    fill: grey;
-}
-.up-icon:hover {
-    fill: var(--black);
-} */
 /* ANIMATION */
 @keyframes fadeInUp {
     from {
