--- a/views/admin/styles/manageProduct.css
+++ b/views/admin/styles/manageProduct.css
@@ -127,11 +127,15 @@
     font-size: 0.8rem;
 }
 
-.product-name {
+.product-info-list {
+    flex-wrap: wrap;
+}
+
+.product-info-item {
     padding: 0.4rem !important;
 }
 
-.product-name-input {
+.product-info-item-input {
     padding: 0.4rem 0.4rem;
     width: 100%;
 }
