--- a/public/CSS/stylespd.css
+++ b/public/CSS/stylespd.css
@@ -156,7 +156,7 @@
     cursor: pointer;
     list-style: none;
 }
-.color-btn:nth-of-type(1) {
+/* .color-btn:nth-of-type(1) {
     background-color: var(--green);
 }
 .color-btn:nth-of-type(2) {
@@ -164,7 +164,7 @@
 }
 .color-btn:nth-of-type(3) {
     background-color: var(--yellow);
-}
+} */
 .color-select input:checked + label {
     color: #FFFFFF;
     border: 1px solid #323333;
