--- a/style.css
+++ b/style.css
@@ -961,3 +961,19 @@ html, body {
 .yellow {
     background-color: var(--yellow);
 }
+
+.color-button {
+    margin: 0;
+    width: 2rem;
+    margin-right: 5px;
+    height: 2rem;
+    line-height: 2rem;
+    position: relative;
+    border: 1px solid #E5E5E5;
+    border-radius: 100px;
+    font-size: 12px;
+    font-weight: 500;
+    text-align: center;
+    cursor: pointer;
+    list-style: none;
+}
