--- a/views/product/style.css
+++ b/views/product/style.css
@@ -645,3 +645,9 @@ h2{
 #price-range {
     margin-top: 1.2rem;
 }
+
+.product-body-filter {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
