--- a/public/CSS/stylespd.css
+++ b/public/CSS/stylespd.css
@@ -231,12 +231,11 @@
     transition-delay: 0.1s;
 }
 .buy-btn {
-    background-color: #FF2023;
-    border: 1px solid #FF2023;
+    background-color: #ffffff;
     transition: all 0.3s;
     position: relative;
     overflow: hidden;
-    color: #ffffff;
+    color: #000000;
     cursor: pointer;
     margin-left: 15px;
 }
@@ -251,8 +250,8 @@
     transition: all 0.5s;
 }
 .buy-btn:hover {
-    color: #000;
-    background-color: #ffffff;
+    color: #ffffff;
+    background-color: #000;
     border: 0.2px solid #000;
 }
 .buy-btn:hover::before {
