--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ html, body {
 .cart-products {
     width: 100%;
     height: 70%;
-    overflow: scroll;
+    /* overflow: scroll; */
     /* -ms-overflow-style: none; */
 }
 
@@ -258,6 +258,7 @@ html, body {
 .cart-item {
     padding: 1.4rem 0;
     margin-bottom: 2rem;
+    border-bottom: solid 1px lightgray;
 }
 
 .cart-item .cart-item-img {
