--- a/views/register/style.css
+++ b/views/register/style.css
@@ -114,4 +114,15 @@
     border: 1px solid var(--black);
 }
 
+.go-to-home {
+    background-color: var(--white);
+    color: var(--black);
+    border: 1px solid var(--black);
+}
+
+.go-to-home:hover {
+    background-color: var(--black);
+    color: var(--white);
+}
+
 
