--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ html, body {
     padding: 20px 24px;
     transform: translateX(100%);
     transition: transform 0.3s ease;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
 .cart-header {
