--- a/public/CSS/cart.css
+++ b/public/CSS/cart.css
@@ -67,6 +67,15 @@ p{
 .cart-btn-link {
     text-decoration: none !important;
 }
+.cart-img {
+    height: 100%;
+    width: 100%;
+    overflow: hidden !important;
+}
+.cart-products  {
+    /* overflow: hidden; */
+    overflow: scroll;
+}
 #back-to-top {
     display: none;
     position: fixed;
