--- a/public/CSS/stylespd.css
+++ b/public/CSS/stylespd.css
@@ -71,6 +71,13 @@
     max-width: 20%;
     vertical-align: middle;
 }
+img#ProductImg {
+    max-height: 100%;
+    max-width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
 /* Detail Product */
 .pro-title{
     text-transform: uppercase;
