--- a/style.css
+++ b/style.css
@@ -241,7 +241,8 @@ html, body {
 
 .cart-products {
     width: 100%;
-    height: 70%;
+    /* height: 70%; */
+    max-height: 500px;
     overflow: scroll;
     /* -ms-overflow-style: none; */
 }
