--- a/style.css
+++ b/style.css
@@ -241,8 +241,7 @@ html, body {
 
 .cart-products {
     width: 100%;
-    /* height: 70%; */
-    max-height: 500px;
+    height: 70%;
     overflow: scroll;
     /* -ms-overflow-style: none; */
 }
